@@ -26,6 +26,7 @@ GNU Compiler Collection and the Edison Design Group compilers."""
 from   qm.executable import *
 import os
 import os.path
+import qm
 import StringIO
 import re
 import sys
@@ -35,8 +36,41 @@ if sys.platform != "win32":
 ########################################################################
 # Classes
 ########################################################################
+
+class TimeoutRedirectedExecutable(RedirectedExecutable):
+    """Support timeouts along with redirection -- if QMTest does.
+
+    Older versions of QMTest did not support timeouts; newer ones do
+    support timeouts."""
     
-class CompilerExecutable(RedirectedExecutable):
+    def __init__(self, timeout = -1):
+        """Construct a new 'TimeoutRedirectedExecutable'.
+
+        'timeout' -- The maximum number of seconds the compiler is
+        permitted to run.  If 'timeout' is -1, the compiler is
+        permitted to run forever."""
+
+        # The compiler is always run in a separate process group.
+        if timeout == -1:
+            timeout = -2
+        # In older version of QMTest, there was no support for
+        # timeouts.  Unfortunately, there was also no support for
+        # version info.
+        try:
+            version = qm.version_info
+        except:
+            version = (0, 0, 0)
+        # Timeouts were first supported in version 2.1.
+        if version[0] > 2 or (version[0] == 2 and version[1] == 1):
+            if timeout == -2:
+                raise
+            RedirectedExecutable.__init__(self, timeout)
+        else:
+            RedirectedExecutable.__init__(self)
+
+
+
+class CompilerExecutable(TimeoutRedirectedExecutable):
     """A 'CompilerExecutable' is a 'Compiler' that is being run."""
 
     def _InitializeChild(self):
@@ -47,9 +81,10 @@ class CompilerExecutable(RedirectedExecutable):
         already have been called in the parent process."""
 
         # Disable compiler core dumps.
-        resource.setrlimit(resource.RLIMIT_CORE, (0, 0))
+        if sys.platform != "win32":
+            resource.setrlimit(resource.RLIMIT_CORE, (0, 0))
         # Do whatever the base class version would otherwise do.
-        RedirectedExecutable._InitializeChild(self)
+        TimeoutRedirectedExecutable._InitializeChild(self)
 
 
     def _StdinPipe(self):
@@ -107,7 +142,8 @@ class Compiler:
         self.SetOptions(options or [])
             
 
-    def Compile(self, mode, files, dir, options=[], output=None):
+    def Compile(self, mode, files, dir, options = [], output = None,
+                timeout = -1):
         """Compile the 'files'.
         
         'mode' -- The compilation mode (one of the 'Compiler.modes')
@@ -126,6 +162,10 @@ class Compiler:
         compilation.  If 'None', the compiler will use a default
         value.
 
+        'timeout' -- The maximum number of seconds the compiler is
+        permitted to run.  If 'timeout' is -1, the compiler is
+        permitted to run forever.
+
         returns -- A tuple '(status, output)'.  The 'status' is the
         exit status returned by the compiler, as indicated by
         'waitpid'.  The 'output' is a string containing the standard
@@ -134,10 +174,10 @@ class Compiler:
         # Get the command to use.
         command = self.GetCompilationCommand(mode, files, options, output)
         # Invoke the compiler.
-        return self.ExecuteCommand(dir, command)
+        return self.ExecuteCommand(dir, command, timeout)
         
 
-    def ExecuteCommand(self, dir, command):
+    def ExecuteCommand(self, dir, command, timeout = -1):
         """Execute 'command' in 'dir'.
 
         'dir' -- The directory in which to execute the command.
@@ -145,13 +185,17 @@ class Compiler:
         'command' --  A sequence of strings, as returned by
         'GetCompilationCommand'.
 
+        'timeout' -- The maximum number of seconds the compiler is
+        permitted to run.  If 'timeout' is -1, the compiler is
+        permitted to run forever.
+
         returns -- A tuple '(status, output)'.  The 'status' is the
         exit status returned by the compiler, as indicated by
         'waitpid'.  The 'output' is a string containing the standard
         output and standard errror generated by the compiler."""
-        
+
         # Invoke the compiler.
-        executable = CompilerExecutable()
+        executable = CompilerExecutable(timeout)
         status = executable.Run(command, dir = dir)
         # Return all of the information.
         return (status, executable.stdout)
