@@ -23,7 +23,7 @@ import string
 # Classes
 ########################################################################
 
-class CompiledExecutable(RedirectedExecutable):
+class CompiledExecutable(TimeoutRedirectedExecutable):
     """A 'CompiledExecutable' is one generated by a compiler."""
 
     def _StdinPipe(self):
@@ -243,8 +243,10 @@ class CompilerTest(Test, CompilerBase):
             result[prefix + "command"] = \
                 "<tt>" + string.join(command) + "</tt>"
             # Run the compiler.
+            timeout = context.get("CompilerTest.compilation_timeout", -1)
             (status, output) \
-                = compiler.ExecuteCommand(self._GetDirectory(), command)
+                = compiler.ExecuteCommand(self._GetDirectory(), command,
+                                          timeout)
 
              # Make sure that the output is OK.
             if not self._CheckOutput(context, result, prefix, output,
@@ -336,7 +338,8 @@ class CompilerTest(Test, CompilerBase):
         'Result.PASS' or to add annotations."""
 
         # Create an object representing the executable.
-        executable = CompiledExecutable()
+        timeout = context.get("CompilerTest.execution_timeout", -1)
+        executable = CompiledExecutable(timeout)
         # Compute the command line for the executable.
         interpreter = context.get("CompilerTest.interpreter")
         if interpreter:
